# MiniAES

./: README.md  build.sh
common/carena/include/: carena.h
common/carena/src/: carena.c
common/encoding/src/encoding/: der.c  hex.c
common/utils/: configure.ac
common/utils/include/: Makefile.am
common/utils/include/utils/: concurrency.h
common/utils/src/: Makefile.am
common/utils/src/utils/: concurrency.c
common/utils/test/: Makefile.am  futureexecutortest.c  futuretest.c  optionstest.c  test.c
miniapps/dedicatedaes/: README  configure.ac
miniapps/dedicatedaes/include/: Makefile.am  cheetah.h  cheetah_pre.h  mpc_aes.h
miniapps/dedicatedaes/src/: Makefile.am  cheetah.c  cheetah_pre.c  compiler.c  main.c  mpc_aes.c
miniapps/dedicatedaes/test/: Makefile.am  aes-cipher-internals.xlsx  jrcircuit.txt
miniapps/dedicatedaes/winx64/: daestest.sln
miniapps/dedicatedaes/winx64/daes/: daes.vcxproj  daes.vcxproj.filters
miniapps/dedicatedaes/winx64/daestest/: daestest.c  daestest.vcxproj  daestest.vcxproj.filters
minitrix/cminimacs/: configure.ac
minitrix/math/: configure.ac
platform/osal/include/: coov4.h  testcase.h
platform/osal/posix_src/: coov4.c  osal.c
platform/osal/src/: rnd.c  singlelinkedlist.c
platform/osal/test/: testcase.c
